src/blocks/column/editor.scss
/**
 * #.# Editor Styles
 *
 * CSS for just Backend enqueued after style.scss
 * which makes it higher in priority.
 */
 .kadence-inner-column-inner.kb-section-only-appender {
	// padding: 1.2em;
	.block-list-appender.wp-block {
		.block-editor-button-block-appender {
			padding: 6px;
			outline: 1px dashed #d5dadf;
			box-shadow: none;
		}
	}
}
// New horizontal column.
.wp-block-kadence-column {
	margin-top: 0px;
    margin-bottom: 0px;
	width: 100%;
	.kadence-inner-column-inner:where(.section-is-flex) {
		display: flex;
		flex-direction: column;
		border: 0 solid transparent;
		position: relative;
		transition: all 0.3s ease;
		&.kadence-inner-column-direction-horizontal {
			flex-direction: row;
		}
		&.kadence-inner-column-direction-horizontal-reverse {
			flex-direction: row-reverse;
		}
		&.kadence-inner-column-direction-vertical-reverse {
			flex-direction: column-reverse;
		}
		&.kadence-inner-column-text-align-left {
			text-align: left;
		}
		&.kadence-inner-column-text-align-center {
			text-align: center;
		}
		&.kadence-inner-column-text-align-right {
			text-align: right;
		}
		> .kb-image-is-ratio-size {
			flex-grow:1;
		}
	}
}
.wp-block-kadence-column * {
	box-sizing: border-box;
}
.wp-block-kadence-column > .kadence-inner-column-direction-vertical.kadence-inner-column-vertical-align-top {
	display: flex;
	justify-content: flex-start;
	flex-direction: column;
	margin-bottom: auto;
    margin-top: 0;
	> .wp-block {
		margin-left: unset;
		margin-right: unset;
	}
}
.wp-block-kadence-column > .kadence-inner-column-direction-vertical.kadence-inner-column-vertical-align-middle {
	display: flex;
	justify-content: center;
	flex-direction: column;
	margin-bottom: auto;
    margin-top: auto;
	> .wp-block {
		margin-left: unset;
		margin-right: unset;
	}
}
.wp-block-kadence-column > .kadence-inner-column-direction-vertical.kadence-inner-column-vertical-align-bottom {
	display: flex;
	justify-content: flex-end;
	flex-direction: column;
	margin-bottom: 0;
    margin-top: auto;
	> .wp-block {
		margin-left: unset;
		margin-right: unset;
	}
}
.wp-block-kadence-column > .kadence-inner-column-direction-horizontal, .wp-block-kadence-column > .kadence-inner-column-direction-horizontal-reverse {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
	gap:10px;
	> .wp-block {
		margin-left: unset;
		margin-right: unset;
		margin-top: 0;
		margin-bottom: 0;
	}
	> .block-editor-block-list__block[data-type="core/embed"] {
		flex: 1;
	}
	>.wp-block-kadence-column {
		flex: 1;
		min-width: 0;
		max-width: none;
	}
	 // Makes svg images work in flex area.
	> .wp-block-kadence-image.image-is-svg {
		width: auto;
	}
	> .block-list-appender {
		margin: 0;
		align-self: stretch;
		.block-editor-default-block-appender {
			display: flex;
			p.block-editor-default-block-appender__content {
				margin: 0;
			}
			.block-editor-inserter {
				position: static;
			}
		}
	}
	&.kadence-inner-column-vertical-align-top {
		align-items: flex-start;
	}
	&.kadence-inner-column-vertical-align-middle {
		align-items: center;
		margin-bottom: auto;
    	margin-top: auto;
	}
	&.kadence-inner-column-vertical-align-bottom {
		align-items: flex-end;
	}
}
.wp-block-kadence-column > .section-is-flex > :where(.wp-block)[data-align=left], .wp-block-kadence-column > .section-is-flex > :where(.wp-block)[data-align=right] {
	height: auto;
}
.wp-block-kadence-column > .kadence-inner-column-direction-vertical:where(.section-is-flex), .wp-block-kadence-column > .kadence-inner-column-direction-vertical-reverse {
	display: flex;
	align-items: stretch;
    flex-wrap: nowrap;
	gap:0;
	> .wp-block {
		margin-left: unset;
		margin-right: unset;
	}
	> .block-editor-block-list__block[data-type="core/embed"] {
		flex: 1;
	}
	>.wp-block-kadence-column {
		flex: 1;
		min-width: 0;
		max-width: none;
	}
	 // Makes svg images work in flex area.
	> .wp-block-kadence-image.image-is-svg {
		width: auto;
	}
	> .block-list-appender {
		margin: 0 !important;
		align-self: stretch;
		.block-editor-default-block-appender {
			display: flex;
			p.block-editor-default-block-appender__content {
				margin: 0;
			}
			.block-editor-inserter {
				position: static;
			}
		}
	}
	&.kadence-inner-column-vertical-align-top {
		justify-content: flex-start;
	}
	&.kadence-inner-column-vertical-align-middle {
		justify-content: center;
		margin-bottom: auto;
    	margin-top: auto;
	}
	&.kadence-inner-column-vertical-align-bottom {
		justify-content: flex-end;
	}
	.wp-block-kadence-advancedgallery {
		flex: 1;
	}
}
.wp-block-kadence-rowlayout .innerblocks-wrap > .kadence-section-sticky > .kadence-inner-column-inner, .wp-block-kadence-rowlayout .kadence-inner-column-inner > .kadence-section-sticky {
    position: sticky;
    top:0;
}
.kadence-inner-column-inner:before {
	content: '';
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
	transition: all .3s ease-in-out;
}
.wp-block-kadence-column.kb-has-max-width > .kadence-inner-column-inner {
    margin-left:auto;
    margin-right:auto;
}

